// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> mount rendering matches the snapshot 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <img
        alt="logo"
        className="App-logo"
        src="logo.svg"
      />
      <Title
        text="Foo"
      >
        <div>
          Foo
        </div>
      </Title>
      <h2 />
      <h3
        className="blue"
      >
        Everyone is welcome!
      </h3>
      <input
        onChange={[Function]}
        type="text"
      />
      <p>
        Edit 
        <code>
          src/App.js
        </code>
         and save to reload.
      </p>
      <p
        className="button-state"
      >
        No!
      </p>
      <button
        onClick={[Function]}
      >
        Click
      </button>
      <Test>
        <div>
          Testing
        </div>
      </Test>
      <p
        className="lifeCycle"
      >
        componentDidMount
      </p>
      <ul
        className="App-list"
      >
        <li>
          Test 1
        </li>
        <li>
          Test 2
        </li>
        <li>
          Test 3
        </li>
      </ul>
      <a
        className="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
    </header>
  </div>
</App>
`;

exports[`<App /> shallow rendering matches the snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <Title
      text="Foo"
    />
    <h2 />
    <h3
      className="blue"
    >
      Everyone is welcome!
    </h3>
    <input
      onChange={[Function]}
      type="text"
    />
    <p>
      Edit 
      <code>
        src/App.js
      </code>
       and save to reload.
    </p>
    <p
      className="button-state"
    >
      No!
    </p>
    <button
      onClick={[Function]}
    >
      Click
    </button>
    <Test />
    <p
      className="lifeCycle"
    >
      componentDidMount
    </p>
    <ul
      className="App-list"
    >
      <li>
        Test 1
      </li>
      <li>
        Test 2
      </li>
      <li>
        Test 3
      </li>
    </ul>
    <a
      className="App-link"
      href="https://reactjs.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Learn React
    </a>
  </header>
</div>
`;
